--- a/DISEÑO/trabajofinal1evalucasseizvaldes/index.html
+++ b/DISEÑO/trabajofinal1evalucasseizvaldes/index.html
@@ -30,7 +30,7 @@
       
         <h3>Zodiaco Chino</h3>
         <p>Cada año se asocia con un <strong>animal del zodiaco chino</strong>, y cada uno de estos animales tiene su propio significado y características, reflejando aspectos de la personalidad y el destino de las personas nacidas bajo ese signo.</p>
-        <img src="cartel.jpg" alt="Cartel Año Nuevo Chino">
+        <img src="cartel.jpg">
       </section>
       <section id="seccion2">
         <h2>Últimos Años e Información del Año Nuevo Chino</h2>
@@ -64,6 +64,12 @@
     </div>
     <aside>
       <h3>ENLACES</h3>
+      <img src="cartel.jpg">
+      <img src="cartel.jpg">
+      <img src="cartel.jpg">
+      <img src="cartel.jpg">
+      <img src="cartel.jpg">
+      
     </aside>
   </div>
   <footer>
