cambiar texto center

--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
@@ -31,19 +31,19 @@
   <div class="container my-4">
     <div class="row">
       <div class="col-md-8">
-        <section id="seccion1" class="mb-4">
-          <h2>Origen y Significado</h2>
+        <section id="seccion1" class="mb-4" class="text-justify" >
+          <h2 class="text-center">Origen y Significado</h2>
           <p>El Año Nuevo Chino, también conocido como el <strong>Festival de Primavera</strong> (<em>春节, Chūn Jié</em>), tiene su origen en las antiguas tradiciones chinas basadas en el calendario lunar. Su fecha varía cada año, ya que se celebra el primer día del primer mes del calendario lunar chino, que generalmente cae entre el 21 de enero y el 20 de febrero.</p>
           <p>El origen de la celebración está ligado a una leyenda sobre una bestia mítica llamada <strong>Nian</strong>, que aterrorizaba a las aldeas al final del invierno. Según la leyenda, Nian temía el color rojo, los ruidos fuertes y las luces brillantes. Por eso, durante la celebración, las personas decoran sus hogares con rojo, lanzan fuegos artificiales y tocan tambores para ahuyentar al monstruo y asegurar un buen año.</p>
-          <h3>Significado Cultural</h3>
+          <h3 class="text-center">Significado Cultural</h3>
           <p>El <strong>significado del Año Nuevo Chino</strong> está asociado con la renovación, el comienzo de un nuevo ciclo y la esperanza de prosperidad, salud y felicidad para el año que comienza. Es un momento para reunirse con la familia, rendir homenaje a los antepasados, limpiar la casa para alejar las malas energías, y hacer ofrendas para atraer buena suerte.</p>
-          <h3>Zodiaco Chino</h3>
+          <h3 class="text-center">Zodiaco Chino</h3>
           <p>Cada año se asocia con un <strong>animal del zodiaco chino</strong>, y cada uno de estos animales tiene su propio significado y características, reflejando aspectos de la personalidad y el destino de las personas nacidas bajo ese signo.</p>
           <img src="Imagenes y Videos/cartel.jpeg" class="img-fluid" class="img-responsive inline-block">
         </section>
 
         <section id="seccion2">
-          <h2>Últimos Años e Información del Año Nuevo Chino</h2>
+          <h2 class="text-center">Últimos Años e Información del Año Nuevo Chino</h2>
           <p>El Año Nuevo Chino es una de las celebraciones más importantes en la cultura china, marcando el inicio de un nuevo ciclo según el calendario lunar. En los últimos años, cada uno tiene un animal del zodiaco chino asociado, formando un ciclo de 12 años. El <strong>2024</strong> es el <em>Año del Dragón de Madera</em>, un año simbolizado por el poder, la vitalidad y el impulso para nuevos proyectos.</p>
           <ul>
             <li><strong>2024:</strong> Año del Dragón de Madera</li>
@@ -52,17 +52,17 @@
             <li><strong>2021:</strong> Año del Buey de Metal</li>
             <li><strong>2020:</strong> Año de la Rata de Metal</li>
           </ul>
-          <h3>Impacto Global Reciente</h3>
+          <h3 class="text-center">Impacto Global Reciente</h3>
           <p>En los últimos años, el Año Nuevo Chino ha adquirido mayor proyección mundial. Aunque las restricciones por la pandemia en 2020 y 2021 afectaron las celebraciones, las festividades virtuales y en línea permitieron mantener vivas las tradiciones. Las ciudades de todo el mundo han comenzado a incorporar celebraciones más grandes y públicas, lo que ha atraído tanto a turistas como a locales, ayudando a difundir aún más la cultura china.</p>
           
-          <h3>Tradiciones que Perduran</h3>
+          <h3 class="text-center">Tradiciones que Perduran</h3>
           <p>A pesar de los desafíos, las festividades han regresado con fuerza. La tradicional danza del dragón, desfiles y grandes reuniones familiares siguen siendo el corazón de la celebración. Cada año se siguen practicando costumbres como la limpieza de la casa, las decoraciones rojas, los fuegos artificiales, las cenas familiares, y el intercambio de sobres rojos (hongbao), que son un símbolo de prosperidad.</p>
           <p>Este año, el <strong>Año del Dragón de Madera</strong>, se celebra con una gran resonancia debido a la importancia cultural del dragón en la tradición china. Es un año lleno de esperanza y nuevas oportunidades para aquellos que siguen el zodiaco chino.</p>
           <img src="Imagenes y Videos/sello.jpeg" class="img-fluid">
         </section>
 
         <section id="seccion3">
-          <h2>Tradiciones y Costumbres durante esta festividad</h2>
+          <h2 class="text-center">Tradiciones y Costumbres durante esta festividad</h2>
           <ul>
             <li><strong>Limpieza de la casa:</strong> Antes de la llegada del nuevo año, las familias limpian a fondo sus hogares. Esta limpieza simboliza la eliminación de las malas energías y la bienvenida de la buena suerte.</li>
             <li><strong>Decoraciones rojas:</strong> Durante las festividades, es común ver decoraciones rojas, como faroles, carteles y sobre todo los "couplets" o versos en rojo que se colocan en las puertas. El rojo es considerado un color de buena suerte que ahuyenta a los malos espíritus.</li>
@@ -75,8 +75,8 @@
         </section>
       </div>
 
-      <div class="col-md-4">
-        <aside class="aside-content">
+      <div class="col-md-4" class="text-center">
+        <aside class="aside-content text-center">
           <h2>Noticias y Enlaces</h2>
           <p>¿Qué animal eres? ¡Haz clic aquí!</p>
           <a href="Imagenes y Videos/horoscopo.webp">
