cambios en pagina

--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
@@ -42,10 +42,51 @@
                         <li><strong>Rojo y oro en los "hongbao":</strong> Se entregan sobres rojos (hongbao) con dinero, como símbolo de suerte y bendiciones para el nuevo año. Este gesto se realiza especialmente entre los mayores hacia los más jóvenes, así como entre empleadores y empleados.</li>
                         <li><strong>Danza del Dragón y el León:</strong> Estas danzas tradicionales se realizan en las calles y son muy populares durante las celebraciones del Año Nuevo Chino. El dragón simboliza el poder y la buena suerte, mientras que el león es utilizado para espantar los malos espíritus.</li>
                     </ul>
-                    <img src="../Imagenes y Videos/tradicciones.webp" class="img-fluid" alt="Tradiciones Año Nuevo Chino">
+                </section>
+                <section class="seccion4">
+                    <div class="container my-4">
+                        <h2 class="text-center">Galería de Tradiciones</h2>
+                        <div class="row">
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="../Imagenes y Videos/tradicciones.webp" class="card-img-top" alt="Tradiciones Año Nuevo Chino">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Tradiciones del Año Nuevo Chino</h5>
+                                        <p class="card-text">La celebración incluye rituales y costumbres que traen prosperidad y buena suerte.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="../Imagenes y Videos/decoracionesrojas.jpg" class="card-img-top" alt="Tradiciones Año Nuevo Chino">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Decoraciones Rojas</h5>
+                                        <p class="card-text">El color rojo simboliza la felicidad y aleja los malos espíritus.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="../Imagenes y Videos/cenafamiliar.avif" class="card-img-top" alt="Tradiciones Año Nuevo Chino">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Cena Familiar</h5>
+                                        <p class="card-text">Las familias se reúnen para compartir una gran cena con platillos simbólicos.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-4">
+                                <div class="card">
+                                    <img src="../Imagenes y Videos/danzadeldragon.jpg" class="card-img-top" alt="Tradiciones Año Nuevo Chino">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Danza del Dragón</h5>
+                                        <p class="card-text">La danza del dragón trae fortuna y es un espectáculo tradicional vibrante.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </div>
-
             <div class="col-md-4">
                 <aside class="aside-content text-center">
                     <h3>Página Oficial:</h3>
@@ -65,5 +106,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="text-center bg-dark text-white py-3">
+        <p>© 2024 Año Nuevo Chino. Todos los derechos reservados.</p>
+      </footer>
 </body>
 </html>
