--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/ultimos_años.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/ultimos_años.html
@@ -87,5 +87,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="text-center bg-dark text-white py-3">
+        <p>© 2024 Año Nuevo Chino. Todos los derechos reservados.</p>
+      </footer>
 </body>
 </html>
