--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
@@ -7,15 +7,6 @@
   <link rel="icon" href="Imagenes y Videos/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/estilos.css">
-  <style>
-    /* Estilo para el borde verde */
-    .borde-verde {
-      border: 3px solid #81c784;
-      border-radius: 10px; /* Bordes redondeados opcionales */
-      padding: 15px; /* Espaciado interior */
-      margin-bottom: 20px; /* Separación entre elementos */
-    }
-  </style>
 </head>
 <body>
     <header class="text-center bg-danger text-white py-3">
@@ -92,7 +83,7 @@
             <div class="card-body text-center">
                 <h5 class="card-title fw-bold">Horóscopo Chino</h5>
                 <p class="card-text">Descubre qué animal del horóscopo chino te representa según tu año de nacimiento.</p>
-                <a href="Imagenes_y_Videos/horoscopo.webp" class="btn btn-primary rounded-pill shadow-sm">¿Qué animal eres? ¡Descúbrelo!</a>
+                <a href="Imagenes y Videos/horoscopo.webp" class="btn btn-primary rounded-pill shadow-sm">¿Qué animal eres? ¡Descúbrelo!</a>
             </div>
         </div>
           <h3>Video:</h3>
