--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
@@ -23,7 +23,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link text-white" href="../index.html">Origen y Significado</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="ultimos_años.html">Últimos Años</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#seccion3">Tradiciones</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="tradiciones.html">Tradiciones</a></li>
                 </ul>
             </div>
         </div>
