--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/Portfolio/tradiciones.html
@@ -6,6 +6,7 @@
   <title>Año Nuevo Chino</title>
   <link rel="icon" href="../Imagenes y Videos/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../CSS/estilos.css">
 </head>
 <body>
@@ -108,6 +109,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <footer class="text-center bg-dark text-white py-3">
         <p>© 2024 Año Nuevo Chino. Todos los derechos reservados.</p>
+        <div class="d-flex justify-content-center gap-3">
+          <a href="https://www.facebook.com/ChineseNewYearMCR" target="_blank" class="fs-3" style="color: #81c784;">
+              <i class="bi bi-facebook"></i>
+          </a>
+          <a href="https://www.instagram.com/chinesenewyear/" target="_blank" class="fs-3" style="color: #81c784;">
+              <i class="bi bi-instagram"></i>
+          </a>
+          <a href="https://twitter.com/CNY2025" target="_blank" class="fs-3" style="color: #81c784;">
+              <i class="bi bi-twitter-x"></i>
+          </a>
+        </div>    
       </footer>
 </body>
 </html>
