--- a/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
+++ b/DISEÑO/2ªevaProyectoGlobalCurso24-25_Lucas_Seiz_Valdes/index.html
@@ -6,6 +6,7 @@
   <title>Año Nuevo Chino</title>
   <link rel="icon" href="Imagenes y Videos/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
@@ -41,51 +42,50 @@
           <h3 class="text-center">Zodiaco Chino</h3>
           <p>Cada año se asocia con un <strong>animal del zodiaco chino</strong>, y cada uno de estos animales tiene su propio significado y características, reflejando aspectos de la personalidad y el destino de las personas nacidas bajo ese signo.</p>
          
-          
          <!-- Carrusel Bootstrap 5 -->
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
+         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+           <div class="carousel-indicators">
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+           </div>
 
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="Imagenes y Videos/cartel.jpeg" class="d-block w-100 img-fluid" alt="Cartel publicitario">
-    </div>
-    <div class="carousel-item">
-      <img src="Imagenes y Videos/tigre.avif" class="d-block w-100 img-fluid" alt="Imagen de un tigre">
-    </div>
-    <div class="carousel-item">
-      <img src="Imagenes y Videos/Gentedefiesta.jpg" class="d-block w-100 img-fluid" alt="Horóscopo ilustrado">
-    </div>
-  </div>
+           <div class="carousel-inner">
+             <div class="carousel-item active">
+               <img src="Imagenes y Videos/cartel.jpeg" class="d-block w-100 img-fluid" alt="Cartel publicitario">
+             </div>
+             <div class="carousel-item">
+               <img src="Imagenes y Videos/tigre.avif" class="d-block w-100 img-fluid" alt="Imagen de un tigre">
+             </div>
+             <div class="carousel-item">
+               <img src="Imagenes y Videos/Gentedefiesta.jpg" class="d-block w-100 img-fluid" alt="Horóscopo ilustrado">
+             </div>
+           </div>
 
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Anterior</span>
-  </button>
+           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+             <span class="visually-hidden">Anterior</span>
+           </button>
 
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Siguiente</span>
-  </button>
-</div>
+           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="visually-hidden">Siguiente</span>
+           </button>
+         </div>
         </section>
       </div>
 
       <div class="col-md-4">
         <aside class="aside-content borde-verde text-center">
           <h2>Noticias y Enlaces</h2>
-          <div class="card shadow-lg rounded-4" style="width: 20rem; margin: auto;">
+          <div class="card shadow-lg rounded-4" style="max-width: 20rem; margin: auto;">
             <img src="Imagenes y Videos/animales.jpg" class="card-img-top rounded-top-4" alt="Horóscopo Chino">
             <div class="card-body text-center">
                 <h5 class="card-title fw-bold">Horóscopo Chino</h5>
                 <p class="card-text">Descubre qué animal del horóscopo chino te representa según tu año de nacimiento.</p>
                 <a href="Imagenes y Videos/horoscopo.webp" class="btn btn-primary rounded-pill shadow-sm">¿Qué animal eres? ¡Descúbrelo!</a>
             </div>
-        </div>
+          </div>
           <h3>Video:</h3>
           <p>Aquí puedes ver por qué es la fiesta más importante de China, ¡espero que lo disfrutes!</p>
           <div class="video-container">
@@ -98,8 +98,20 @@
 
   <footer class="text-center bg-dark text-white py-3">
     <p>© 2024 Año Nuevo Chino. Todos los derechos reservados.</p>
+    <div class="d-flex justify-content-center gap-3">
+      <a href="https://www.facebook.com/ChineseNewYearMCR" target="_blank" class="fs-3" style="color: #81c784;">
+          <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/chinesenewyear/" target="_blank" class="fs-3" style="color: #81c784;">
+          <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://twitter.com/CNY2025" target="_blank" class="fs-3" style="color: #81c784;">
+          <i class="bi bi-twitter-x"></i>
+      </a>
+    </div>    
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
